WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96044
Enter the creationContext before creating DOM wrappers
https://bugs.webkit.org/show_bug.cgi?id=96044
Summary
Enter the creationContext before creating DOM wrappers
Adam Barth
Reported
2012-09-06 17:23:52 PDT
[V8] Enter the creationContext before creating DOM wrappers
Attachments
Patch
(3.32 KB, patch)
2012-09-06 17:26 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
diff to fast/dom/prototype-inheritance.html after this patch
(44.27 KB, text/html)
2012-09-06 17:30 PDT
,
Adam Barth
no flags
Details
Patch
(15.51 KB, patch)
2012-09-07 11:52 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(13.61 KB, patch)
2012-09-07 14:06 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-09-06 17:26:47 PDT
Created
attachment 162626
[details]
Patch
Adam Barth
Comment 2
2012-09-06 17:30:05 PDT
Created
attachment 162627
[details]
diff to fast/dom/prototype-inheritance.html after this patch
Kentaro Hara
Comment 3
2012-09-06 17:31:59 PDT
Comment on
attachment 162626
[details]
Patch OK
Adam Barth
Comment 4
2012-09-06 17:52:44 PDT
I'm going to hold off on landing this change for a bit. I need to investigate these test failures. (They might be a result of this patch, redness in the tree, or flakiness.) Regressions: Unexpected text failures : (1) fast/dom/Geolocation/callback-to-deleted-context.html = TEXT Regressions: Unexpected crashes : (1) http/tests/security/cross-origin-worker-websql-allowed.html = CRASH Regressions: Unexpected timeouts : (3) fast/dom/Geolocation/disconnected-frame-permission-denied.html = TIMEOUT fast/dom/Geolocation/disconnected-frame.html = TIMEOUT inspector/styles/protocol-css-regions-commands.html = TIMEOUT
Adam Barth
Comment 5
2012-09-07 11:46:50 PDT
This actually involves a small bug fix in JSC as well.
Adam Barth
Comment 6
2012-09-07 11:52:34 PDT
Created
attachment 162837
[details]
Patch
Early Warning System Bot
Comment 7
2012-09-07 14:00:34 PDT
Comment on
attachment 162837
[details]
Patch
Attachment 162837
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/13766994
Adam Barth
Comment 8
2012-09-07 14:06:34 PDT
Created
attachment 162865
[details]
Patch
Eric Seidel (no email)
Comment 9
2012-09-07 14:13:52 PDT
Comment on
attachment 162865
[details]
Patch OK
WebKit Review Bot
Comment 10
2012-09-07 14:45:01 PDT
Comment on
attachment 162865
[details]
Patch Clearing flags on attachment: 162865 Committed
r127923
: <
http://trac.webkit.org/changeset/127923
>
WebKit Review Bot
Comment 11
2012-09-07 14:45:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug